2.3/ssl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
